// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShortcutsHelp > renders correctly in 'narrow' mode on 'linux' 1`] = `
"────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode
 @ select file or folder
 Esc Esc clear & rewind
 Tab Tab focus UI
 Ctrl+Y YOLO mode
 Shift+Tab cycle mode
 Ctrl+V paste images
 Alt+M raw markdown mode
 Ctrl+R reverse-search history
 Ctrl+X open external editor
 Alt+C cycle model
 Alt+X cycle model backward
"
`;

exports[`ShortcutsHelp > renders correctly in 'narrow' mode on 'mac' 1`] = `
"────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode
 @ select file or folder
 Esc Esc clear & rewind
 Tab Tab focus UI
 Ctrl+Y YOLO mode
 Shift+Tab cycle mode
 Ctrl+V paste images
 Option+M raw markdown mode
 Ctrl+R reverse-search history
 Ctrl+X open external editor
 Option+C cycle model
 Option+X cycle model backward
"
`;

exports[`ShortcutsHelp > renders correctly in 'wide' mode on 'linux' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode                    Ctrl+Y YOLO mode                Ctrl+R reverse-search history
 @ select file or folder         Shift+Tab cycle mode            Ctrl+X open external editor
 Esc Esc clear & rewind          Ctrl+V paste images             Alt+C cycle model
 Tab Tab focus UI                Alt+M raw markdown mode         Alt+X cycle model backward
"
`;

exports[`ShortcutsHelp > renders correctly in 'wide' mode on 'mac' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 Shortcuts See /help for more
 ! shell mode                    Ctrl+Y YOLO mode                Ctrl+R reverse-search history
 @ select file or folder         Shift+Tab cycle mode            Ctrl+X open external editor
 Esc Esc clear & rewind          Ctrl+V paste images             Option+C cycle model
 Tab Tab focus UI                Option+M raw markdown mode      Option+X cycle model backward
"
`;
